--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="banner container">
             <div>
                 <div class="row">
-                    <div class="col-lg-6 text-white my-5">
+                    <div class="col-lg-6 col-md-12 col-12 text-white my-5">
                         <div class="mt-5">
                             <p>Computer-controlled digital transistorized with electronic advance</p>
                             <h1>Honda CBR 300R</h1>
@@ -115,7 +115,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-12 col-12">
                         <img src="images/header-bike.png" class="img-fluid" alt="">
                     </div>
                 </div>
@@ -135,13 +135,13 @@
                 <hr>
             </div>
             <div class="row">
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-4 col-md-6 col-12 mb-3">
                     <img class="img-fluid" src="images/bike-1.png" alt="">
                 </div>
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-4 col-md-6 col-12 mb-3">
                     <img class="img-fluid" src="images/bike-2.png" alt="">
                 </div>
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-4 col-md-6 col-12 mb-3">
                     <img class="img-fluid" src="images/bike-1.png" alt="">
                 </div>
             </div>
@@ -156,7 +156,7 @@
                 <h1 class="text-center">latest News</h1>
             </div>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-                <div class="col">
+                <div class="col-lg-4 col-md-6 col-12">
                     <div class="card h-100">
                         <img src="images/bike-1.png" style="width: 337px; padding: 15px; margin: 0 auto;"
                             class="card-img-top" alt="...">
@@ -172,7 +172,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-4 col-md-6 col-12">
                     <div class="card h-100">
                         <img src="images/bike-2.png" style="width: 337px; padding: 15px; margin: 0 auto;"
                             class="card-img-top" alt="...">
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-4 col-md-6 col-12">
                     <div class="card h-100">
                         <img src="images/bike-3.png" style="width: 337px; padding: 15px; margin: 0 auto;"
                             class="card-img-top" alt="...">
@@ -218,7 +218,7 @@
                 <h2>Happy <span style="color: #E76F51;">Clients says</span></h2>
             </div>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-12 col-12">
                     <div class="border p-4 rounded shadow-lg text-center">
                         <img style="width: 149px;" class="img-fluid mb-3" src="images/user-1.png" alt="">
                         <p class="text-center text-muted small">Slate helps you see how
@@ -238,7 +238,7 @@
                         <h6 class="small">Banker</h6>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-12 col-12">
                     <div class="border p-4 rounded shadow-lg text-center">
                         <img style="width: 149px;" class="img-fluid mb-3" src="images/user-2.png" alt="">
                         <p class="text-center text-muted small">Slate helps you see how
@@ -258,7 +258,7 @@
                         <h6 class="small">Banker</h6>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-12 col-12">
                     <div class="border p-4 rounded shadow-lg h-100 text-center">
                         <img style="width: 149px; height: 140px;" class=" rounded rounded-circle mb-4"
                             src="images/user-3.png" alt="">
@@ -289,10 +289,10 @@
                 <h2>Frequently Asked <span style="color: #E76F51;">Questions</span></h2>
             </div>
             <div class="row">
-                <div class="col-lg-6 mb-3">
+                <div class="col-lg-6 col-md-12 col-12 mb-3">
                     <img class="img-fluid" style="width: 431px;" src="images/faq.png" alt="">
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-12 col-12">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item mb-3">
                             <h2 class="accordion-header" id="headingOne">
@@ -382,13 +382,13 @@
                 </h2>
             </div>
             <div class="row align-items-center">
-                <div class="col-lg-6 mb-4 col-md-6">
-                    <img style="width: 400px;" src="images/download (1).jpg" alt="">
+                <div class="col-lg-6 mb-4 col-md-12 col-12">
+                    <img style="width: 300px;" src="images/download (1).jpg" alt="">
                 </div>
-                <div class="col-lg-6 col-12 mb-3">
+                <div class="col-lg-6 col-md-12 col-12 mb-3">
                     <div class="row">
 
-                        <div class="col-sm-6 mb-3">
+                        <div class="col-lg-6 mb-3">
                             <div class="card">
                                 <div class="card-body">
                                     <h6 class="card-title">Honda CBR150R Price List;</h6>
@@ -408,7 +408,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 mb-3">
+                        <div class="col-lg-6 mb-3">
                             <div class="card">
                                 <div class="card-body">
                                     <h6 class="card-title">Honda CBR150R Price List;</h6>
@@ -445,7 +445,7 @@
 
 
             <div class="row gx-5">
-                <div class="col-lg-6  p-1">
+                <div class="col-lg-6 col-md-12 col-12 p-1">
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner border">
                             <div class="carousel-item active">
@@ -471,7 +471,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-12 col-12">
                     <h2 class="text-center fst-italic"> <span class="text-danger">About </span> <span
                             class="text-warning">Honda</span></h2>
                     <p class="justify-content-center text-muted small">The Honda Motor Company, Ltd. (Japanese:
